refactor: Introduce domain oriented concept around the message processing of the agent conversation