@@ -36,12 +36,14 @@ import io.camunda.connector.agenticai.aiagent.framework.AiFrameworkChatResponse;
 import io.camunda.connector.agenticai.aiagent.memory.conversation.ConversationStoreRegistry;
 import io.camunda.connector.agenticai.aiagent.memory.conversation.inprocess.InProcessConversationContext;
 import io.camunda.connector.agenticai.aiagent.memory.conversation.inprocess.InProcessConversationStore;
-import io.camunda.connector.agenticai.aiagent.memory.runtime.RuntimeMemory;
+import io.camunda.connector.agenticai.aiagent.memory.runtime.SlidingMessagesWindow;
 import io.camunda.connector.agenticai.aiagent.model.AgentContext;
+import io.camunda.connector.agenticai.aiagent.model.AgentConversation;
 import io.camunda.connector.agenticai.aiagent.model.AgentMetrics;
 import io.camunda.connector.agenticai.aiagent.model.AgentMetrics.TokenUsage;
 import io.camunda.connector.agenticai.aiagent.model.AgentResponse;
 import io.camunda.connector.agenticai.aiagent.model.AgentState;
+import io.camunda.connector.agenticai.aiagent.model.ConversationSnapshot;
 import io.camunda.connector.agenticai.aiagent.model.OutboundConnectorAgentExecutionContext;
 import io.camunda.connector.agenticai.aiagent.model.request.MemoryConfiguration;
 import io.camunda.connector.agenticai.aiagent.model.request.MemoryStorageConfiguration.InProcessMemoryStorageConfiguration;
@@ -52,11 +54,11 @@ import io.camunda.connector.agenticai.model.message.AssistantMessage;
 import io.camunda.connector.agenticai.model.message.Message;
 import io.camunda.connector.agenticai.model.tool.ToolCall;
 import io.camunda.connector.agenticai.model.tool.ToolCallProcessVariable;
-import io.camunda.connector.agenticai.model.tool.ToolCallResult;
 import io.camunda.connector.api.error.ConnectorException;
 import io.camunda.connector.api.outbound.JobCompletionFailure;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -88,14 +90,14 @@ class OutboundConnectorAgentRequestHandlerTest {
   @Mock private AgentInitializer agentInitializer;
   @Mock private ConversationStoreRegistry conversationStoreRegistry;
   @Mock private AgentLimitsValidator limitsValidator;
-  @Mock private AgentMessagesHandler messagesHandler;
+  @Mock private ConversationMessageComposer messageComposer;
   @Mock private GatewayToolHandlerRegistry gatewayToolHandlers;
   @Mock private AiFrameworkAdapter<?> framework;
   @Mock private AgentResponseHandler responseHandler;
   @Mock private AgentInstanceClient agentInstanceClient;
   @Mock private OutboundConnectorAgentExecutionContext agentExecutionContext;
 
-  @Captor private ArgumentCaptor<RuntimeMemory> runtimeMemoryCaptor;
+  @Captor private ArgumentCaptor<ConversationSnapshot> snapshotCaptor;
 
   @InjectMocks private OutboundConnectorAgentRequestHandler requestHandler;
 
@@ -105,9 +107,9 @@ class OutboundConnectorAgentRequestHandlerTest {
         .when(conversationStoreRegistry)
         .getConversationStore(eq(agentExecutionContext), any(AgentContext.class));
     lenient()
-        .doReturn(List.of())
-        .when(messagesHandler)
-        .addUserMessages(any(), any(), any(), any(), anyList());
+        .doAnswer(inv -> inv.getArgument(1, AgentConversation.class))
+        .when(messageComposer)
+        .compose(any(), any());
   }
 
   @Test
@@ -125,10 +127,10 @@ class OutboundConnectorAgentRequestHandlerTest {
     final var response = requestHandler.handleRequest(agentExecutionContext);
     assertThat(response.agentResponse().context()).isEqualTo(discoveryAgentContext);
     assertThat(response.agentResponse().toolCalls())
-        .containsExactly(ToolCallProcessVariable.from(toolDiscoveryToolCalls.get(0)));
+        .containsExactly(ToolCallProcessVariable.from(toolDiscoveryToolCalls.getFirst()));
 
     verifyNoInteractions(
-        limitsValidator, messagesHandler, gatewayToolHandlers, framework, responseHandler);
+        limitsValidator, messageComposer, gatewayToolHandlers, framework, responseHandler);
   }
 
   @Test
@@ -191,13 +193,13 @@ class OutboundConnectorAgentRequestHandlerTest {
     assertThat(response.agentResponse()).isNull();
 
     verifyNoInteractions(
-        limitsValidator, messagesHandler, gatewayToolHandlers, framework, responseHandler);
+        limitsValidator, messageComposer, gatewayToolHandlers, framework, responseHandler);
   }
 
   @Test
   void orchestratesRequestExecutionWithoutToolCalls() {
     mockSystemPrompt();
-    mockUserPrompt(USER_PROMPT_CONFIGURATION_WITHOUT_TOOLS, List.of());
+    mockUserPrompt(USER_PROMPT_CONFIGURATION_WITHOUT_TOOLS);
 
     when(agentInitializer.initializeAgent(agentExecutionContext))
         .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
@@ -229,9 +231,6 @@ class OutboundConnectorAgentRequestHandlerTest {
 
     final var response = requestHandler.handleRequest(agentExecutionContext);
 
-    assertThat(runtimeMemoryCaptor.getValue().allMessages())
-        .containsExactlyElementsOf(expectedMessages);
-
     var agentResponse = response.agentResponse();
     assertThat(agentResponse).isNotNull();
     assertThat(agentResponse.context().state()).isEqualTo(AgentState.READY);
@@ -253,7 +252,7 @@ class OutboundConnectorAgentRequestHandlerTest {
   @Test
   void orchestratesRequestExecutionWithToolCalls() {
     mockSystemPrompt();
-    mockUserPrompt(USER_PROMPT_CONFIGURATION_WITH_TOOLS, List.of());
+    mockUserPrompt(USER_PROMPT_CONFIGURATION_WITH_TOOLS);
 
     when(agentInitializer.initializeAgent(agentExecutionContext))
         .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
@@ -290,9 +289,6 @@ class OutboundConnectorAgentRequestHandlerTest {
 
     final var response = requestHandler.handleRequest(agentExecutionContext);
 
-    assertThat(runtimeMemoryCaptor.getValue().allMessages())
-        .containsExactlyElementsOf(expectedMessages);
-
     var agentResponse = response.agentResponse();
     assertThat(agentResponse).isNotNull();
     assertThat(agentResponse.context().state()).isEqualTo(AgentState.READY);
@@ -320,16 +316,15 @@ class OutboundConnectorAgentRequestHandlerTest {
 
   @Test
   void usesConfiguredMaxMessagesWhenMessagesExceedContextWindow() {
-    final var runtimeMemory =
+    final var result =
         setupRuntimeMemorySizeTest(
             new MemoryConfiguration(new InProcessMemoryStorageConfiguration(), 11));
 
-    assertThat(runtimeMemory.allMessages()).hasSize(31);
-    assertThat(runtimeMemory.filteredMessages()).hasSize(11);
+    assertThat(result.allMessages()).hasSize(31);
+    assertThat(result.windowedMessages()).hasSize(11);
 
-    assertThat(runtimeMemory.filteredMessages().getFirst())
-        .isEqualTo(userMessage("User message 20"));
-    assertThat(runtimeMemory.filteredMessages().getLast())
+    assertThat(result.windowedMessages().getFirst()).isEqualTo(userMessage("User message 20"));
+    assertThat(result.windowedMessages().getLast())
         .isEqualTo(assistantMessage("This is the assistant message"));
   }
 
@@ -337,31 +332,28 @@ class OutboundConnectorAgentRequestHandlerTest {
   @MethodSource("memoryConfigurationsWithoutMaxMessages")
   void fallsBackToDefaultContextWindowSizeWhenMemoryConfigurationIsMissing(
       MemoryConfiguration memoryConfiguration) {
-    final var runtimeMemory = setupRuntimeMemorySizeTest(memoryConfiguration);
+    final var result = setupRuntimeMemorySizeTest(memoryConfiguration);
 
-    assertThat(runtimeMemory.allMessages()).hasSize(31);
-    assertThat(runtimeMemory.filteredMessages()).hasSize(20);
+    assertThat(result.allMessages()).hasSize(31);
+    assertThat(result.windowedMessages()).hasSize(20);
 
-    assertThat(runtimeMemory.filteredMessages().getFirst())
-        .isEqualTo(userMessage("User message 11"));
-    assertThat(runtimeMemory.filteredMessages().getLast())
+    assertThat(result.windowedMessages().getFirst()).isEqualTo(userMessage("User message 11"));
+    assertThat(result.windowedMessages().getLast())
         .isEqualTo(assistantMessage("This is the assistant message"));
   }
 
   @Test
   void usesAllMessagesWhenMessagesWithinContextWindow() {
-    final var runtimeMemory =
+    final var result =
         setupRuntimeMemorySizeTest(
             new MemoryConfiguration(new InProcessMemoryStorageConfiguration(), 35));
 
-    assertThat(runtimeMemory.allMessages()).hasSize(31);
-    assertThat(runtimeMemory.filteredMessages()).hasSize(31);
-    assertThat(runtimeMemory.filteredMessages())
-        .containsExactlyElementsOf(runtimeMemory.allMessages());
+    assertThat(result.allMessages()).hasSize(31);
+    assertThat(result.windowedMessages()).hasSize(31);
+    assertThat(result.windowedMessages()).containsExactlyElementsOf(result.allMessages());
 
-    assertThat(runtimeMemory.filteredMessages().getFirst())
-        .isEqualTo(userMessage("User message 0"));
-    assertThat(runtimeMemory.filteredMessages().getLast())
+    assertThat(result.windowedMessages().getFirst()).isEqualTo(userMessage("User message 0"));
+    assertThat(result.windowedMessages().getLast())
         .isEqualTo(assistantMessage("This is the assistant message"));
   }
 
@@ -387,7 +379,7 @@ class OutboundConnectorAgentRequestHandlerTest {
   void shouldEmitThinkingPatchThenMetricsPatchDuringHandleRequest() {
     // given
     mockSystemPrompt();
-    mockUserPrompt(USER_PROMPT_CONFIGURATION_WITHOUT_TOOLS, List.of());
+    mockUserPrompt(USER_PROMPT_CONFIGURATION_WITHOUT_TOOLS);
     when(agentInitializer.initializeAgent(agentExecutionContext))
         .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
     final var assistantMessage = assistantMessage("No tool calls here.");
@@ -437,7 +429,7 @@ class OutboundConnectorAgentRequestHandlerTest {
   void shouldEmitThinkingPatchThenToolCallingMetricsPatchDuringHandleRequest() {
     // given
     mockSystemPrompt();
-    mockUserPrompt(USER_PROMPT_CONFIGURATION_WITH_TOOLS, List.of());
+    mockUserPrompt(USER_PROMPT_CONFIGURATION_WITH_TOOLS);
     when(agentInitializer.initializeAgent(agentExecutionContext))
         .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
     final var assistantMessage = AssistantMessage.builder().toolCalls(TOOL_CALLS).build();
@@ -488,21 +480,7 @@ class OutboundConnectorAgentRequestHandlerTest {
     // given: tool call results arrive as input, but the LLM responds with plain text (no new tool
     // calls)
     mockSystemPrompt();
-    when(agentExecutionContext.userPrompt()).thenReturn(USER_PROMPT_CONFIGURATION_WITHOUT_TOOLS);
-    doAnswer(
-            i -> {
-              final var userMsg = userMessage(USER_PROMPT_CONFIGURATION_WITHOUT_TOOLS.prompt());
-              final var runtimeMemory = i.getArgument(2, RuntimeMemory.class);
-              runtimeMemory.addMessage(userMsg);
-              return List.of(userMsg);
-            })
-        .when(messagesHandler)
-        .addUserMessages(
-            eq(agentExecutionContext),
-            any(AgentContext.class),
-            any(RuntimeMemory.class),
-            eq(USER_PROMPT_CONFIGURATION_WITHOUT_TOOLS),
-            anyList());
+    mockUserPrompt(USER_PROMPT_CONFIGURATION_WITHOUT_TOOLS);
     when(agentInitializer.initializeAgent(agentExecutionContext))
         .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
     final var assistantMessage = assistantMessage("Done.");
@@ -548,8 +526,8 @@ class OutboundConnectorAgentRequestHandlerTest {
     verifyNoInteractions(agentInstanceClient);
   }
 
-  private RuntimeMemory setupRuntimeMemorySizeTest(MemoryConfiguration memoryConfiguration) {
-    mockUserPrompt(new UserPromptConfiguration("User message 30", List.of()), List.of());
+  private MemorySizeTestResult setupRuntimeMemorySizeTest(MemoryConfiguration memoryConfiguration) {
+    mockUserPrompt(new UserPromptConfiguration("User message 30", List.of()));
 
     when(agentExecutionContext.memory()).thenReturn(memoryConfiguration);
 
@@ -572,10 +550,28 @@ class OutboundConnectorAgentRequestHandlerTest {
     when(gatewayToolHandlers.transformToolCalls(any(AgentContext.class), anyList()))
         .thenAnswer(i -> i.getArgument(1));
 
+    final var capturedAgentContext = new AtomicReference<AgentContext>();
+    when(responseHandler.createResponse(
+            eq(agentExecutionContext), any(AgentContext.class), eq(assistantMessage), anyList()))
+        .thenAnswer(
+            i -> {
+              capturedAgentContext.set(i.getArgument(1, AgentContext.class));
+              return AgentResponse.builder()
+                  .context(i.getArgument(1, AgentContext.class))
+                  .responseMessage(assistantMessage)
+                  .toolCalls(List.of())
+                  .build();
+            });
+
     requestHandler.handleRequest(agentExecutionContext);
 
-    return runtimeMemoryCaptor.getValue();
+    final var allMessages =
+        ((InProcessConversationContext) capturedAgentContext.get().conversation()).messages();
+    final var windowedMessages = SlidingMessagesWindow.of(memoryConfiguration).apply(allMessages);
+    return new MemorySizeTestResult(allMessages, windowedMessages);
   }
+
+  private record MemorySizeTestResult(List<Message> allMessages, List<Message> windowedMessages) {}
 
   static Stream<MemoryConfiguration> memoryConfigurationsWithoutMaxMessages() {
     return Stream.of(
@@ -583,60 +579,37 @@ class OutboundConnectorAgentRequestHandlerTest {
   }
 
   private void mockSystemPrompt() {
-    when(agentExecutionContext.systemPrompt()).thenReturn(SYSTEM_PROMPT_CONFIGURATION);
-    doAnswer(
-            i -> {
-              final var runtimeMemory = i.getArgument(2, RuntimeMemory.class);
-              runtimeMemory.addMessage(systemMessage(SYSTEM_PROMPT_CONFIGURATION.prompt()));
-              return null;
-            })
-        .when(messagesHandler)
-        .addSystemMessage(
-            eq(agentExecutionContext),
-            any(AgentContext.class),
-            any(RuntimeMemory.class),
-            eq(SYSTEM_PROMPT_CONFIGURATION));
+    lenient().when(agentExecutionContext.systemPrompt()).thenReturn(SYSTEM_PROMPT_CONFIGURATION);
   }
 
-  private void mockUserPrompt(
-      UserPromptConfiguration userPromptConfiguration, List<ToolCallResult> toolCallResults) {
-    when(agentExecutionContext.userPrompt()).thenReturn(userPromptConfiguration);
+  private void mockUserPrompt(UserPromptConfiguration userPromptConfiguration) {
     doAnswer(
             i -> {
-              final var userMessage = userMessage(userPromptConfiguration.prompt());
-              final var runtimeMemory = i.getArgument(2, RuntimeMemory.class);
-              runtimeMemory.addMessage(userMessage);
-              return List.of(userMessage);
+              final var conversation = i.getArgument(1, AgentConversation.class);
+              final var sysConfig = agentExecutionContext.systemPrompt();
+              final var sysMsg =
+                  (sysConfig != null && sysConfig.prompt() != null && !sysConfig.prompt().isBlank())
+                      ? systemMessage(sysConfig.prompt())
+                      : null;
+              return conversation.withTurn(
+                  sysMsg, List.of(userMessage(userPromptConfiguration.prompt())));
             })
-        .when(messagesHandler)
-        .addUserMessages(
-            eq(agentExecutionContext),
-            any(AgentContext.class),
-            any(RuntimeMemory.class),
-            eq(userPromptConfiguration),
-            eq(toolCallResults));
+        .when(messageComposer)
+        .compose(eq(agentExecutionContext), any(AgentConversation.class));
   }
 
   private void mockFrameworkExecution(AssistantMessage assistantMessage) {
     when(framework.executeChatRequest(
-            eq(agentExecutionContext), any(AgentContext.class), runtimeMemoryCaptor.capture()))
+            eq(agentExecutionContext), any(AgentContext.class), snapshotCaptor.capture()))
         .thenAnswer(
-            i -> {
-              final var agentContext = i.getArgument(1, AgentContext.class);
-              return new TestFrameworkChatResponse(
-                  agentContext.withMetrics(
-                      agentContext
-                          .metrics()
-                          .incrementModelCalls(1)
-                          .incrementTokenUsage(new TokenUsage(10, 20))),
-                  assistantMessage,
-                  Map.of("message", assistantMessage.content()));
-            });
+            i ->
+                new TestFrameworkChatResponse(
+                    assistantMessage, new AgentMetrics.TokenUsage(10, 20), Map.of()));
   }
 
   private record TestFrameworkChatResponse(
-      AgentContext agentContext,
       AssistantMessage assistantMessage,
+      AgentMetrics.TokenUsage tokenUsage,
       Map<String, Object> rawChatResponse)
       implements AiFrameworkChatResponse<Map<String, Object>> {}
 }
